module(name = "cloud_archive")

# Register the cloud_archive extension with default (empty) tool config.
# Consumers can override tools via cloud_archive.configure() in their own
# MODULE.bazel — see extensions.bzl for details.
cloud_archive = use_extension("//:extensions.bzl", "cloud_archive")
use_repo(cloud_archive, "cloud_archive_tools")
